modified social networks & notification id

--- a/www/templates/info/main.html
+++ b/www/templates/info/main.html
@@ -16,10 +16,10 @@
             <ion-item ng-click="go('menu.sponsor')">
                 3. Patrocinadores
             </ion-item>
-            <ion-item ng-click="openLink('http://www.cabodeplata.com/')">
+            <ion-item ng-click="openLink('http://www.interestelarsevilla.com/')">
                 4. Web
             </ion-item>
-            <ion-item ng-click="openLink('http://www.cabodeplata.com/wp-content/uploads/docs/Aviso_Legal_Cabo_de_Plata.pdf')">
+            <ion-item ng-click="openLink('http://www.interestelarsevilla.com/wp-content/uploads/2016/08/Aviso_Legal_Interestelar_Sevilla_2016.pdf')">
                 5. Aviso legal
             </ion-item>
         </ion-list>
