--- a/www/templates/map/main.html
+++ b/www/templates/map/main.html
@@ -6,6 +6,6 @@
         <div id="map" data-tap-disabled="true" scroll="false"></div>
     </ion-content>
     <div ng-if="mapData.image==undefined && view.ready" class="coming-soon">
-        <div ng-include src="'templates/info/coming-soon.html'"></div>
+        <img src="img/coolway/coming_soon.png">
     </div>
 </ion-view>
