--- a/www/templates/schedule/main.html
+++ b/www/templates/schedule/main.html
@@ -32,6 +32,6 @@
         <div ng-include="'templates/schedule/by-stage.html'" ng-if="view.show_list == 'stage' && view.scheduleActive" ></div>
     </ion-content>
     <div ng-if="!view.scheduleActive && view.ready" class="coming-soon">
-        <div ng-include src="'templates/info/coming-soon.html'"></div>
+        <img src="img/coolway/coming_soon.png">
     </div>
 </ion-view>
