--- a/www/templates/user/sign_in.html
+++ b/www/templates/user/sign_in.html
@@ -32,7 +32,7 @@
         </div>
         <div class="login-footer">
             <img src="img/login/sign-in.png" ng-click="login()">
-            <a ng-click="openLink('http://www.festivaldelesarts.com/wp-content/uploads/2015/10/Condiciones_Generales_Arts_2016.pdf')">T&eacute;rminos y condiciones</a>
+            <a ng-click="openLink('http://www.interestelarsevilla.com/wp-content/uploads/2016/08/Aviso_Legal_Interestelar_Sevilla_2016.pdf')">T&eacute;rminos y condiciones</a>
         </div>
     </div>
 
