--- a/www/templates/foodies/main.html
+++ b/www/templates/foodies/main.html
@@ -30,7 +30,7 @@
             </ion-list>
         </div>
         <div ng-if="!view.foodies.length && view.ready" class="coming-soon">
-            <img src="img/coolway/coming_soon.jpg">
+            <img src="img/coolway/coming_soon.png" style="width: 100%">
         </div>
     </ion-content>
 </ion-view>
