--- a/www/css/style.css
+++ b/www/css/style.css
@@ -100,6 +100,9 @@
     height: 50px !important;
 }
 
+.platform-ios .bar-header{
+    height: 70px !important;
+}
 
 .logo{
     width: 100%;
@@ -116,6 +119,10 @@
 .menu-button{
     height: 30px;
     margin-top:5px;
+}
+
+.platform-ios .menu-button{
+    padding: 2px;
 }
 
 .buttons-left:hover, .buttons-right:hover{
@@ -358,8 +365,16 @@
     height: 35px;
 }
 
+.platform-ios .header-right-menu img{
+    padding: 2px;
+}
+
 .header-right-menu .button-clear{
     margin-top: 3px !important;
+}
+
+.platform-ios .header-right-menu .button-clear{
+    margin-top: 25px !important;
 }
 
 .sidebar-right .menu-tabs{
@@ -479,6 +494,10 @@
     font-size: 18px;
     font-weight: 700;
     color: #ffffff;
+}
+
+.platform-ios .discover .subtitle .center{
+    padding: 2% !important;
 }
 
 .subtitle .center{
@@ -645,6 +664,10 @@
     height: 40px;
 }
 
+.platform-ios .list .right img{
+    padding: 4px;
+}
+
 .coolway .header{
     background-color: #333333 !important;
 }
@@ -788,6 +811,11 @@
 .artist .list .favorite img{
     height: 40px !important;
     width: 40px !important;
+}
+
+
+.platform-ios .artist .list .favorite img{
+    padding: 5px;
 }
 
 .discover .legend{
@@ -950,6 +978,10 @@
     color: #ffffff !important;
 }
 
+.platform-ios .login-header{
+    height: 75px !important;
+}
+
 .login-header .button-clear, .login-header .button-clear{
     color: #ffffff !important;
 }
@@ -987,6 +1019,14 @@
     /*background: -webkit-linear-gradient(top,  rgba(245,229,193,0.7) 99%,rgba(245,229,193,0) 100%,rgba(245,229,193,0) 101%);*/
     /*background: linear-gradient(to bottom,  rgba(245,229,193,0.7) 99%,rgba(245,229,193,0) 100%,rgba(245,229,193,0) 101%);*/
     /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3f5e5c1', endColorstr='#00f5e5c1',GradientType=0 );*/
+}
+
+.platform-ios .login-content{
+    margin-top:  -65px !important;
+}
+
+.platform-ios .div-form{
+    margin-top: 70px !important;
 }
 
 .login-content .title{
