Adding style & modified social networks

--- a/www/templates/info/sponsor.html
+++ b/www/templates/info/sponsor.html
@@ -15,15 +15,7 @@
                 <img ng-src="img/sponsor/negrita.png">
             </div>
             <div class="col col-50">
-                <img ng-src="img/sponsor/coolway.png">
-            </div>
-        </div>
-        <div class="row images">
-            <div class="col col-50">
                 <img ng-src="img/sponsor/redbull.png">
-            </div>
-            <div class="col col-50">
-                <img ng-src="img/sponsor/das.png">
             </div>
         </div>
         <div class="row images">
@@ -31,15 +23,34 @@
                 <img ng-src="img/sponsor/underwood.png">
             </div>
             <div class="col col-50">
-                <img ng-src="img/sponsor/monbus.png">
+                <img ng-src="img/sponsor/superbritanico.png">
             </div>
         </div>
         <div class="row images">
             <div class="col col-50">
-                <img ng-src="img/sponsor/blablacar.png">
+                <img ng-src="img/sponsor/monbus.png">
             </div>
             <div class="col col-50">
-                </br>
+                <img ng-src="img/sponsor/defestivales.png">
+            </div>
+        </div>
+        <div class="row subtitle">
+            <div class="col col-100">
+                <p>Medios oficiales</p>
+            </div>
+        </div>
+        <div class="row images">
+            <div class="col col-50">
+                <img ng-src="img/sponsor/radio3.png">
+            </div>
+            <div class="col col-50">
+                <img ng-src="img/sponsor/sol.png">
+            </div>
+            <div class="col col-50">
+                <img ng-src="img/sponsor/viva.png">
+            </div>
+            <div class="col col-50">
+                <br>
             </div>
         </div>
         <div class="row subtitle">
@@ -48,11 +59,8 @@
             </div>
         </div>
         <div class="row images">
-            <div class="col col-50">
-                <img ng-src="img/sponsor/ayuntamiento barbate.png">
-            </div>
-            <div class="col col-50">
-                </br>
+            <div class="col col-100">
+                <img ng-src="img/sponsor/centro_andaluz.png">
             </div>
         </div>
     </ion-content>
