--- a/www/templates/menu/left.html
+++ b/www/templates/menu/left.html
@@ -43,13 +43,13 @@
             <img src="img/menu/category/transparent.gif">
             <a>SOCIAL</a>
         </button>
-        <button class="button button-clear category" menu-close ui-sref="menu.coolway">
-            <img src="img/menu/category/coolway.png">
-            <a>COOLWAY</a>
-        </button>
+        <!--<button class="button button-clear category" menu-close ui-sref="menu.coolway">-->
+            <!--<img src="img/menu/category/coolway.png">-->
+            <!--<a>COOLWAY</a>-->
+        <!--</button>-->
 
         <div class="footer-left-menu">
-            <img src="img/menu/the_night_time.png">
+            <!--<img src="img/menu/the_night_time.png">-->
         </div>
     </ion-content>
 </ion-view>
