--- a/www/templates/ticket/main.html
+++ b/www/templates/ticket/main.html
@@ -1,8 +1,9 @@
 <ion-view>
     <ion-content overflow-scroll="true" class="ticket">
-        <iframe id="tkt-iframe" frameborder="0" scrolling="no"
-                src="https://www.ticketea.com/entradas-festival-cabo-de-plata/custom/"
-                style="overflow: hidden; height: 1600px; width:100%">
+        <iframe id="tkt-iframe" width="100%" frameborder="0" scrolling="no"
+                src="https://www.ticketea.com/entradas-festival-interestelar-sevilla/custom/"
+                style="overflow: hidden; height: 821px;width:100%" >
+
         </iframe>
         <div class="partner">
             <a href="//www.ticketea.com/entradas-festival-les-arts-2016/" alt="Festival de les Arts 2016" title="ticketea">
