--- a/www/templates/user/notifications.html
+++ b/www/templates/user/notifications.html
@@ -10,7 +10,7 @@
             </ion-item>
         </ion-list>
     </div>
-    <div ng-if="view.favorites.length < 1">
+    <div ng-if="view.notifications.length < 1">
         <div class="not-found" scroll="false">
             <div class="image">
                 </br>
