--- a/www/templates/artist/main.html
+++ b/www/templates/artist/main.html
@@ -3,15 +3,13 @@
         <div class="row subtitle filter" scroll="false" ng-if="view.currentDate < view.feastDate">
             <div class="col col-100">
                 <div class="left">
-                    <img src="img/chair/1.png">
-                    <img src="img/chair/2.png">
+                    <br>
                 </div>
                 <div class="center">
-                    <span countdown date='June 10, 2016 00:00:00'>&nbsp Cargando... </span>
+                    <span countdown date='June 08, 2017 00:00:00'>&nbsp Cargando... </span>
                 </div>
                 <div class="right">
-                    <img src="img/chair/3.png">
-                    <img src="img/chair/4.png">
+                    <br>
                 </div>
 
             </div>
@@ -23,13 +21,16 @@
                     <img ng-src="img/player/play.png">
                 </button>
                 <!--<button class="button button-clear btn-action" ng-if="view.currentTrack.spotify_id == item.spotify_id && view.loader">-->
-                    <!--<img ng-src="img/player/loader.gif">-->
+                <!--<img ng-src="img/player/loader.gif">-->
                 <!--</button>-->
                 <button class="button button-clear btn-action" ng-if="view.isPlaying && view.currentTrack.spotify_id == item.spotify_id && !view.loader" ng-click="pauseTrack()">
                     <img ng-src="img/player/pause.png">
                 </button>
                 <div class="legend">
-                    <p>{{item.name|cleanName}}</p>
+                    <p>
+                        {{item.name|cleanName| uppercase | limitTo:15}}
+                        <span ng-if="item.name.length > 15">...</span>
+                    </p>
                 </div>
             </div>
         </div>
