modified left menu

--- a/www/templates/menu/left.html
+++ b/www/templates/menu/left.html
@@ -48,8 +48,8 @@
             <!--<a>Coolway</a>-->
         <!--</button>-->
 
-        <!--<div class="footer-left-menu">-->
-            <!--<img src="img/menu/the_night_time.png">-->
-        <!--</div>-->
+        <div class="footer-left-menu">
+            <img src="img/menu/the_night_time.png">
+        </div>
     </ion-content>
 </ion-view>
